--- a/FE_Creaciones_FayFa/package.json
+++ b/FE_Creaciones_FayFa/package.json
@@ -16,7 +16,8 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
