--- a/FE_Creaciones_FayFa/package.json
+++ b/FE_Creaciones_FayFa/package.json
@@ -16,6 +16,7 @@
     "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
     "firebase": "^11.0.2",
+    "jwt-js-decode": "^1.9.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
